--- a/MentoMenti/src/main/resources/static/error/404.html
+++ b/MentoMenti/src/main/resources/static/error/404.html
@@ -5,13 +5,21 @@
 <title>404 Error page</title>
 <style>
 .wrapContents {
-	
-	width: 100%;
-	overflow: hidden;
+
 	text-align:center;
-	margin-left : 20px;
-	margin-top : 50;
-	color : black;
+	margin-top : 20px;
+}
+
+
+.circle {
+	width : 300px;
+	height : 300px;
+	border-radius : 20px;
+	border : 3px solid #002266;
+	font : NanumGothic;
+	font-size : 30px;
+	text-decoration:none;
+	line-height : 100px;
 }
 </style>
 </head>
@@ -19,12 +27,16 @@
 
 
 	<div class="content1">
-		<img src="resources/img/logo3.png"
-			style="display: block; height: 180px; position: relative; margin:0 auto">
+		<a><img src="resources/img/404.png"
+			style="display: block; height : auto; max-width : 80%; position: relative; margin:0 auto"></a>
 
 	</div>
-<hr class ="line1" style = "border:none; border : 1px double gray;">
-<h3 class="font-weight-700" style="margin:50px; font-size : 30;">원하시는 페이지를 찾을 수 없습니다</h3>
-<span><a href="main" style="text-decoration:none; color:#87CEEB; font-size: 20;" >메인으로>></a></span>
+
+<a class ="circle" href="main" style="color:#002266; text-align : center;" >Go Home</a>
+
+
 </div>
+
+
+
 </html>
