에러페이지 메인버튼 수정

--- a/MentoMenti/src/main/resources/static/error/404.html
+++ b/MentoMenti/src/main/resources/static/error/404.html
@@ -7,20 +7,21 @@
 .wrapContents {
 
 	text-align:center;
-	margin-top : 20px;
+
 }
 
 
 .circle {
-	width : 300px;
-	height : 300px;
+	width : 150px;
+	height : 60px;
 	border-radius : 20px;
 	border : 3px solid #002266;
-	font : NanumGothic;
-	font-size : 30px;
 	text-decoration:none;
-	line-height : 100px;
+	margin : 0 auto;
+	line-height : 60px;
 }
+
+
 </style>
 </head>
 <div class="wrapContents">
@@ -28,11 +29,11 @@
 
 	<div class="content1">
 		<a><img src="resources/img/404.png"
-			style="display: block; height : auto; max-width : 80%; position: relative; margin:0 auto"></a>
+			style="display: block; height : auto; max-width : 80%; position: relative; margin:0 auto"></a></div>
 
-	</div>
 
-<a class ="circle" href="main" style="color:#002266; text-align : center;" >Go Home</a>
+<div class ="circle"><a href = "main" style = "font-size : 20px; color : black; font-family : NanumGothic;
+text-align:center; text-decoration:none;">메인으로</a></div>
 
 
 </div>
